syntax = "proto3";

package auth;

option go_package = "github.com/Babushkin05/simple-marketplace/goods-service/api/gen/authpb;authpb";

service AuthService {
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
  string login = 2;
}
